Styling the website

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>MERN STACK</title>
+    <title>Clasificación REST</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,14 +11,6 @@
   </head>
   <body>
 
-    <nav className="light-blue darken-4">
-      <div className="container">
-        <div className="nav-wrapper">
-          <a href="#" className="brand-logo">MERN Stack</a>
-        </div>
-      </div>
-    </nav>
-    
     <div id="app">
 
     </div>
